--- a/index.html
+++ b/index.html
@@ -103,31 +103,32 @@ https://www.tooplate.com/view/2115-marvel
                   <div class="col-lg-11 text-center mx-auto col-12">
 
                       <div class="col-lg-8 mx-auto">
-                        <h2>Things I have designed for digital media agencies</h2>
+                        <h2>Things I have personally Designed</h2>
                       </div>
 
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/bandicam 2024-09-12 11-29-42-658.jpg" class="img-fluid" alt="project image">
+                            <a href="https://mentorhive.vercel.app/" class="mine"><img src="images/project/bandicam 2024-09-12 11-29-42-658.jpg" class="img-fluid" alt="project image">
+                            </a>
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/bandicam 2024-09-12 11-31-30-387.jpg" class="img-fluid" alt="project image">
+                           <a href="https://possiblemark.github.io/Possible-s-TO-DO-LIST/" class="mine"><img src="images/project/bandicam 2024-09-12 11-31-30-387.jpg" class="img-fluid" alt="project image"></a> 
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/bandicam 2024-09-12 11-32-50-581.jpg" class="img-fluid" alt="project image">
+                            <a href="" class="mine"><img src="images/project/bandicam 2024-09-14 16-46-47-637.jpg" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/bandicam 2024-09-12 11-33-52-017.jpg" class="img-fluid" alt="project image">
+                            <a href="" class="mine"><img src="images/project/bandicam 2024-09-14 16-47-35-738.jpg" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
 
@@ -239,7 +240,7 @@ https://www.tooplate.com/view/2115-marvel
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">Copyright &copy; 2024 Company Name . All rights reserved</p>
+                        <p class="copyright-text text-center">Copyright &copy; 2024 Mark's Tech. All rights reserved</p>
                         <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Developer Mark</a></p>
                     </div>
                     
